@@ -19,23 +19,14 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 
 /**
- * N25 — esemény-spawnpontok (teszter-kérés): a világesemények ne (csak) játékosra
- * spawnoljanak, hanem HELYRE. Két út, eseményenként élő configgal
- * (world-events.anchors.&lt;esemény&gt;.mode):
- * <ul>
- *   <li><b>points</b> — admin-kijelölt fix pontok (/events spawnpoint add — pl. állandó
- *       világboss-aréna); több pont közül véletlen választás;</li>
- *   <li><b>random</b> — véletlen koordináta a fő világ spawnja körüli sávban
- *       (world-events.anchors.random-radius);</li>
- *   <li><b>mixed</b> — pont, ha van; különben random;</li>
- *   <li><b>player</b> (default) — a régi játékos-horgony marad.</li>
- * </ul>
- * A pontok restart-állók (event-spawnpoints.yml). A hívó a kapott helyet a SAJÁT
- * régió-hopjával dolgozza fel (Y-t is ő igazítja) — itt csak adat születik.
+ * N25 — esemény-spawnpontok: a világesemények ne csak játékosra,
+ * hanem admin által kijelölt vagy véletlen helyre is horgonyozhassanak.
  */
 public final class EventSpawnPointManager implements PersistentStore {
 
     public record SpawnPoint(String id, String eventKey, String world, int x, int y, int z) { }
+
+    private static volatile EventSpawnPointManager active;
 
     private final JavaPlugin plugin;
     private final ConfigManager configManager;
@@ -47,17 +38,24 @@ public final class EventSpawnPointManager implements PersistentStore {
         this.configManager = configManager;
         this.storageFile = new File(plugin.getDataFolder(), "event-spawnpoints.yml");
         plugin.getDataFolder().mkdirs();
+        active = this;
     }
 
-    /** Pont felvétele; a visszaadott id a végleges (ütközésnél számozott). */
-    public synchronized String add(final String requestedId, final String eventKey, final Location location) {
+    /** Runtime bridge for systems installed after the core DI graph is assembled. */
+    public static EventSpawnPointManager current() {
+        return active;
+    }
+
+    public synchronized String add(final String requestedId, final String eventKey,
+                                   final Location location) {
         String id = (requestedId == null || requestedId.isBlank()
                 ? eventKey + "-" + (points.size() + 1) : requestedId).toLowerCase(Locale.ROOT);
         while (points.containsKey(id)) {
             id = id + "x";
         }
         points.put(id, new SpawnPoint(id, eventKey.toLowerCase(Locale.ROOT),
-                location.getWorld().getName(), location.getBlockX(), location.getBlockY(), location.getBlockZ()));
+                location.getWorld().getName(), location.getBlockX(),
+                location.getBlockY(), location.getBlockZ()));
         save();
         return id;
     }
@@ -75,45 +73,65 @@ public final class EventSpawnPointManager implements PersistentStore {
     }
 
     /**
-     * A hívó esemény horgony-helye a configolt mód szerint, vagy null = maradjon a
-     * játékos-horgony út. Az "any" esemény-kulcsú pontok minden eseménynek jók.
+     * Resolves the configured anchor or returns null for the player-anchor fallback.
+     * World-boss legacy fixed anchors are normalized to the exact centre coordinate of
+     * their chunk. The manager's historical ±8 randomization then remains inside that
+     * same chunk, so the scheduled Folia region always owns the eventual probe column.
      */
     public Location resolveAnchorLocation(final String eventKey) {
+        final String normalizedEvent = eventKey.toLowerCase(Locale.ROOT);
         final String mode = configManager.getString(
-                "world-events.anchors." + eventKey + ".mode", "player").toLowerCase(Locale.ROOT);
+                "world-events.anchors." + normalizedEvent + ".mode", "player")
+                .toLowerCase(Locale.ROOT);
         if ("player".equals(mode)) {
             return null;
         }
         if ("points".equals(mode) || "mixed".equals(mode)) {
             final List<SpawnPoint> matching = new ArrayList<>();
             for (final SpawnPoint point : points.values()) {
-                if (point.eventKey().equals(eventKey) || "any".equals(point.eventKey())) {
+                if (point.eventKey().equals(normalizedEvent) || "any".equals(point.eventKey())) {
                     matching.add(point);
                 }
             }
             if (!matching.isEmpty()) {
-                final SpawnPoint pick = matching.get(ThreadLocalRandom.current().nextInt(matching.size()));
+                final SpawnPoint pick = matching.get(
+                        ThreadLocalRandom.current().nextInt(matching.size()));
                 final World world = Bukkit.getWorld(pick.world());
                 if (world != null) {
-                    return new Location(world, pick.x() + 0.5D, pick.y(), pick.z() + 0.5D);
+                    return anchorLocation(normalizedEvent, world,
+                            pick.x(), pick.y(), pick.z());
                 }
             }
             if ("points".equals(mode)) {
-                return null; // nincs használható pont — vissza a játékos-útra
+                return null;
             }
         }
         if ("random".equals(mode) || "mixed".equals(mode)) {
-            final World world = Bukkit.getWorlds().isEmpty() ? null : Bukkit.getWorlds().get(0);
+            final World world = Bukkit.getWorlds().isEmpty()
+                    ? null : Bukkit.getWorlds().getFirst();
             if (world == null) {
                 return null;
             }
-            final int radius = Math.max(64, configManager.getInt("world-events.anchors.random-radius", 1500));
+            final int radius = Math.max(64,
+                    configManager.getInt("world-events.anchors.random-radius", 1500));
             final Location center = world.getSpawnLocation();
-            final int x = center.getBlockX() + ThreadLocalRandom.current().nextInt(-radius, radius + 1);
-            final int z = center.getBlockZ() + ThreadLocalRandom.current().nextInt(-radius, radius + 1);
-            return new Location(world, x + 0.5D, center.getY(), z + 0.5D);
+            final int x = center.getBlockX()
+                    + ThreadLocalRandom.current().nextInt(-radius, radius + 1);
+            final int z = center.getBlockZ()
+                    + ThreadLocalRandom.current().nextInt(-radius, radius + 1);
+            return anchorLocation(normalizedEvent, world, x, center.getBlockY(), z);
         }
         return null;
+    }
+
+    private static Location anchorLocation(final String eventKey, final World world,
+                                           final int x, final int y, final int z) {
+        if ("world-boss".equals(eventKey)) {
+            return new Location(world,
+                    EventSpawnSafetyPolicy.chunkCenterCoordinate(x), y,
+                    EventSpawnSafetyPolicy.chunkCenterCoordinate(z));
+        }
+        return new Location(world, x + 0.5D, y, z + 0.5D);
     }
 
     @Override
@@ -122,18 +140,20 @@ public final class EventSpawnPointManager implements PersistentStore {
         if (!storageFile.exists()) {
             return;
         }
-        final YamlConfiguration yaml = hu.taliann.icesmp.storage.YamlStore.loadTracked(storageFile, plugin.getLogger());
+        final YamlConfiguration yaml = YamlStore.loadTracked(storageFile, plugin.getLogger());
         final ConfigurationSection root = yaml.getConfigurationSection("points");
         if (root == null) {
             return;
         }
         for (final String id : root.getKeys(false)) {
-            final ConfigurationSection p = root.getConfigurationSection(id);
-            if (p == null) {
+            final ConfigurationSection point = root.getConfigurationSection(id);
+            if (point == null) {
                 continue;
             }
-            points.put(id, new SpawnPoint(id, p.getString("event", "any"),
-                    p.getString("world", "world"), p.getInt("x"), p.getInt("y"), p.getInt("z")));
+            points.put(id, new SpawnPoint(id,
+                    point.getString("event", "any"),
+                    point.getString("world", "world"),
+                    point.getInt("x"), point.getInt("y"), point.getInt("z")));
         }
     }
 
@@ -151,8 +171,10 @@ public final class EventSpawnPointManager implements PersistentStore {
             }
             YamlStore.saveAtomic(storageFile, yaml);
         } catch (final IOException exception) {
-            plugin.getLogger().severe("Failed to save event-spawnpoints.yml: " + exception.getMessage());
-            throw new java.io.UncheckedIOException("Failed to save event-spawnpoints.yml", exception);
+            plugin.getLogger().severe("Failed to save event-spawnpoints.yml: "
+                    + exception.getMessage());
+            throw new java.io.UncheckedIOException(
+                    "Failed to save event-spawnpoints.yml", exception);
         }
     }
 }
